--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@types/prismjs": "^1.26.3",
+    "axios": "^1.6.3",
     "highlight.js": "^11.9.0",
+    "moment": "^2.30.1",
     "prismjs": "^1.29.0",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/prismjs": "^1.26.3",
